[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/PeerStatus.gd" type="Script" id=1]

[node name="PeerStatus" type="HBoxContainer"]
margin_right = 600.0
margin_bottom = 48.0
size_flags_vertical = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
margin_top = 17.0
margin_right = 20.0
margin_bottom = 31.0
rect_min_size = Vector2( 20, 0 )
text = "10"
align = 2

[node name="NameLabel" type="Label" parent="."]
margin_left = 24.0
margin_top = 17.0
margin_right = 310.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "User"

[node name="StatusLabel" type="Label" parent="."]
margin_left = 314.0
margin_top = 17.0
margin_right = 600.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "Connecting..."
align = 2
